画像をアップロードできるようにしました。
  - file_column プラグインを追加しました
  - file_column 619行目の Inflector のバグを修正しました
  - 画像が表示されるように _form.html.erb を修正しました

--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -5,6 +5,7 @@
   </span>
 </dt>
 <dd>
+  <%= image_tag url_for_file_column(entry, :image) if entry.image %>
   <%= simple_format auto_link(entry.content) %>
 </dd>
 <% if logged_in? %>
