--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for(@entry) do |f| %>
+<% form_for(@entry, :html => { :multipart => true }) do |f| %>
   <p>
     <%= f.label :title, "タイトル" %>
     <%= f.text_field :title %>
@@ -6,6 +6,10 @@
   <p>
     <%= f.label :content, "内容" %>
     <%= f.text_area :content %>
+  </p>
+  <p>
+    <%= f.label :image, '画像' %>
+    <%= f.file_field :image %>
   </p>
   <p>
     <%= f.submit '送信' %>
