--- a/app/views/layouts/entries.html.erb
+++ b/app/views/layouts/entries.html.erb
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <%= auto_discovery_link_tag :atom, formatted_entries_url(:atom) %>
   <title>Blog</title>
   <%= stylesheet_link_tag 'scaffold', 'blog' %>
 </head>
