--- a/app/views/layouts/entries.html.erb
+++ b/app/views/layouts/entries.html.erb
@@ -11,6 +11,7 @@
 <body>
   <div id="container">
     <ul id="navi">
+      <li id="naviLogin"><%= link_to "Login", login_path %></li>
       <li id="naviBlog"><%= link_to "Blog", entries_path %></li>
     </ul>
     <h1><%= image_tag 'blog_header.jpg' %></h1>
