--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "記事の追加", new_entry_path, :class => "operation" if logged_in? %>
+<%= link_to '記事の追加', new_entry_path, :class => 'operation' if logged_in? %>
 
 <dl>
   <%= render :partial => @entries %>
