--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,7 +1,7 @@
 <h1>記事の作成</h1>
   <%= error_messages_for :entry %>
   
-  <%= render :partial => "form" %>
+  <%= render :partial => 'form' %>
 
 <div class="operation">
   <%= link_to '戻る', entries_path %>
