--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>記事の編集</h1>
   <%= error_messages_for :entry %>
   
-  <%= render :partial => "form" %>
+  <%= render :partial => 'form' %>
 
 <div class="operation">  
   <%= link_to '表示', @entry %>
